fixed backspace & overflow

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 button {
-    @apply bg-[#3E424B]  hover:scale-90 hover:bg-[#3E424B]/60 transition-all text-white rounded-full min-w-12 h-12 shadow-xl flex justify-center items-center text-base;
+    @apply bg-[#3E424B]  hover:scale-95 active:scale-90 transition-all text-white rounded-full min-w-12 h-12 shadow-xl flex justify-center items-center text-base;
 }
 
 body {
